--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,42 +1,80 @@
-.bg-header {
-    background-color: purple;
-}
-
-.bg-footer {
-    background-color: rgba(228, 17, 228, 0.493);
-}
-
-address {
-    font-size: 100%;
-    margin: 0;
-    color: #000;
-}
-
-.text-white {
-    color: #fff;
-}
-
 .row-header {
-    margin: 0;
-    padding: 0;
+  margin: 0px auto;
+  padding: 0px 0px;
 }
 
 .row-content {
-    margin: 0 auto;
-    padding: 50px 0 50px 0;
-    border-bottom: 1px ridge;
-    min-height: 400px;
+  margin: 0px auto;
+  padding: 50px 0px;
+  border-bottom: 1px ridge;
+  min-height: 400px;
 }
 
 .footer {
-    background: #d1c4e9;
-    margin: 0px auto;
-    padding: 20px 0 20px 0;
+  background-color: #d1c4e9;
+  margin: 0px auto;
+  padding: 20px 0px;
 }
 
 .jumbotron {
-    padding: 70px 30px 70px 30px;
-    margin: 0px auto;
-    background: #9575cd;
-    color: cornsilk;
+  margin: 0px auto;
+  padding: 70px 30px;
+  background: #9575cd;
+  color: floralwhite;
 }
+
+address {
+  font-size: 80%;
+  margin: 0px;
+  color: #0f0f0f;
+}
+
+body {
+  padding: 50px 0px 0px 0px;
+  z-index: 0;
+}
+
+.navbar-dark {
+  background-color: #512da8;
+}
+
+.tab-content {
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  padding: 10px;
+}
+
+.carousel {
+  background: #512da8;
+}
+
+.carousel .carousel-item {
+  height: 300px;
+}
+
+.carousel .carousel-item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 300px;
+}
+
+#carouselButton {
+  margin: auto;
+  z-index: 1;
+}
+
+.modal-header {
+  background: #9575cd;
+  color: floralwhite;
+}
+
+.modal-header button {
+  color: floralwhite;
+}
+
+.modal-body {
+  background: #d1c4e9;
+}
+/*# sourceMappingURL=main.css.map */
