--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,9 +39,9 @@ body {
 }
 
 .tab-content {
-  border-left: 1px solid #ddd;
-  border-right: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
+  border-left: 1px solid #999;
+  border-right: 1px solid #999;
+  border-bottom: 1px solid #999;
   padding: 10px;
 }
 
@@ -50,14 +50,12 @@ body {
 }
 
 .carousel .carousel-item {
-  height: 300px;
+  height: 900px;
 }
 
 .carousel .carousel-item img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-height: 300px;
+  width: 100%;
+  height: 100%;
 }
 
 #carouselButton {
