--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,8 +1,7 @@
-$lt-gray: #ddd;
+$lt-gray: #999;
 $background-dark: #512da8;
 $background-light: #9575cd;
 $background-pale: #d1c4e9;
-$carousel-item-height: 300px;
 
 @mixin zero-margin($pad-up-dn, $pad-left-right) {
   margin: 0px auto;
@@ -56,12 +55,10 @@ body {
   background: $background-dark;
 
   .carousel-item {
-    height: $carousel-item-height;
+    height: 900px;
     img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      min-height: 300px;
+      width: 100%;
+      height: 100%;
     }
   }
 }
