--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,30 +1,29 @@
-$lt-gray: #999;
 $background-dark: #512da8;
 $background-light: #9575cd;
 $background-pale: #d1c4e9;
 
-@mixin zero-margin($pad-up-dn, $pad-left-right) {
-  margin: 0px auto;
-  padding: $pad-up-dn $pad-left-right;
-}
-
 .row-header {
-  @include zero-margin(0px, 0px);
+  margin: 0px auto;
+  padding: 0 0;
 }
 
 .row-content {
-  @include zero-margin(50px, 0px);
+  margin: 0px auto;
+  padding: 50px 0;
   border-bottom: 1px ridge;
   min-height: 400px;
+  display: block;
 }
 
 .footer {
   background-color: $background-pale;
-  @include zero-margin(20px, 0px);
+  margin: 0px auto;
+  padding: 20px 0;
 }
 
 .jumbotron {
-  @include zero-margin(70px, 30px);
+  margin: 0px auto;
+  padding: 70px 30px;
   background: $background-light;
   color: floralwhite;
 }
@@ -45,9 +44,9 @@ body {
 }
 
 .tab-content {
-  border-left: 1px solid $lt-gray;
-  border-right: 1px solid $lt-gray;
-  border-bottom: 1px solid $lt-gray;
+  border-left: 1px solid #999;
+  border-right: 1px solid #999;
+  border-bottom: 1px solid #999;
   padding: 10px;
 }
 
